# aws-hackathon-14aug24-team8

./: DASHBOARD_README.md  MIGRATION_GUIDE.md  README.md  README_RAG.md  UI_DESIGN_ISSUES_ANALYSIS.md  __main__.py  app.py  apprunner.yaml  dashboard.py  data_processor.py  demo_rag.py  demo_unified.py  design_guide.md  front_end_prompt.md  hello.py  pyproject.toml  requirements.txt  run_dashboard.py  run_dashboard.sh  setup.sh  test_setup.py
agent/: agent_lambda_code.py  agent_lambda_code_v2.py  agent_lambda_code_v3.py
config/: analyser_agent_config.yml  config.yaml
data/: daily_aggregations.csv  generator.py  preprocess_data.py  processed_conversations.csv  prompt_generator.md  split_and_upload_to_s3.py
data/conversations/: 0baa10f0-a536-4f42-9248-92973124fee7.json  0f19d256-4f15-44cd-b7d1-e79b2878f8bd.json
data/conversations_test/: 041009b9-442e-40f7-a431-a6daef001a69.json
data/invoke_agent_sentiment/: 025007-8e469b19-0baa10f0-a536-4f42-9248-92973124fee7.json
rag/: bedrock_kb_retrieve.py  invoke_agent_s3_lambda.py  rag_prompt.md  rage_agent_lambda.py
src/: aws_agent.py  bedrock_client.py  rag_handler.py  s3_handler.py  unified_ai_agent.py
