[project]
name = "aws-hackathon-14aug24-team8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ['boto3==1.34.0',
'python-dotenv==1.0.0',
'pyyaml==6.0.1',
'pandas==2.1.4',
'numpy==1.26.2',
'requests==2.31.0',
'langchain==0.1.0',
'asyncio==3.4.3',
'pydantic==2.5.0']
